fixed margins on .stuck and .customTipField

--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ label {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
-  margin: .5em 0;
+  margin: .25em 0;
   cursor: pointer;
   position: relative;
 }
